# builder

./: .env.example  .gitignore  README.md  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/scripts/: merge-updater-latest.cjs  merge-updater-latest.js
.github/workflows/: release.yml
backend/: env.ts  index.ts  memory.ts  package-lock.json  package.json  post-processor.ts  renderability-check.ts  tsconfig.json
backend/agent/: auto-fix-trivial.ts  create.ts  errors.ts  executor.ts  failure.ts  intent-diff.ts  intent.ts  layout-utils.ts  modify.ts  patch-applier.ts  patch-plan-step-validator.ts  patch-schema.ts  patch-validator.ts  path-resolver.ts  plan-order.ts  planner-cache.ts  planner.ts  plannerActivation.ts  recovery.ts  router.ts  semantic-patch.ts  stop-conditions.ts  telemetry.ts  types.ts  validator.ts
backend/ai-contract/: schema.ts  types.ts
backend/design-rules/: accessibility.ts  consistency.ts  evaluator.ts  index.ts  (+3 more)
docs/: UPDATER.md
electron/: main.ts  preload.ts  tsconfig.json
shared/: chat-types.ts  children-to-data.ts  component-manifest.json  component-prompt-mapping.ts  component-render-defaults.ts  componentNames.ts  index.ts  json-extractor-strict.ts  json-validator-strict.ts  package-lock.json  package.json
src/: App.tsx  desktop.ts  index.html  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  file_watcher.rs  git.rs  lib.rs  main.rs
(+80 files in other folders)
