[package]
name = "builder"
version = "1.0.1"
description = "Regere Builder"
edition = "2021"
rust-version = "1.77"

[lib]
name = "builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
tauri-plugin-opener = "2"
notify = "6"
notify-debouncer-mini = "0.4"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
